fixed shadow overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,7 +159,7 @@ header {
   */
 
 .news {
-    overflow: auto;
+    overflow: visible;
 }
 
 .news-card {
